Footer z-index/hover correction

--- a/css/alexandria.css
+++ b/css/alexandria.css
@@ -204,12 +204,12 @@ ul#archiveList li a {
 	overflow: hidden;
 	padding: 0 1em;
 	border: 1px solid transparent;
+	border-radius: 50em;
 	font-size: 1.5em;
 }
 ul#archiveList li a:hover {
 	background-color: #eee;
 	background-color: rgba(238, 238, 238, .8);
-	border-radius: 50em;
 	border: 1px solid #cfcfcf;
 	box-shadow: 1px 1px 1px rgba(238, 238, 238, .8);
 }
@@ -246,8 +246,11 @@ body > footer {
 	z-index: 200;
 	width: 100%;
 	height: 50px;
-	padding: 50px 0 0;
+	padding: 0;
 	overflow: hidden;	
+}
+body > footer:hover {
+	padding: 50px 0 0;
 }
 section#timeline {
 	padding: 0;
